--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Francesc Font-Clos"
   avatar           : "profile.png"
-  bio              : "mathematician turned into data scientist"
+  bio              : "still having fun every day"
   location         : "Torino"
   employer         : 
   googlescholar    : "https://scholar.google.it/citations?user=t1n2wHQAAAAJ&hl=en"
