--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Francesc Font-Clos"
-  avatar           : "fran_white_circle.jpeg"
+  avatar           : "fran_square.jpeg"
   bio              : "still having fun every day"
   location         : "Torino"
   employer         : 
